--- a/templates/plot.html
+++ b/templates/plot.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en"></html>
-
-<head>
-    <meta charset="utf-8">
-    <title>Sample Ids</title>
-</head>
-
 <body>
     <h1>Plot of {{ plot_name }}</h1>
     <img src="{{ plot }}"></img>
 </body>
+<div style="page-break-after: always;"></div>
