--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ h1 {
 
 h2 {color: black;
     text-align: left;
-    padding: 10px;
+    padding: 0px;
     font-family: Verdana, sans-serif;
     font-weight: bold;
     font-size: 20px
@@ -42,9 +42,9 @@ p {
 }
 
 
-img {
+/* img {
   width: 10cm;
-}
+} */
 
 
 #project_table {
@@ -79,8 +79,10 @@ img {
   width: 95%;
 }
 #info_table td, #project_table th {
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd; */
   padding: 8px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;  
 }
 #info_table tr:nth-child(odd){background-color: #f2f2f2;}
 #info_table th {
@@ -92,4 +94,75 @@ img {
   color: black;
 }
 
+.summary_table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+}
 
+.summary_table th {
+  text-align: left;
+  padding-top:3px;
+  background-color: white;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;    
+  color: black;
+}
+
+/* .summary_table tr:nth-child(odd){background-color: #f2f2f2;} */
+.summary_table tr{
+  padding-top: 2px;
+  padding-bottom: 3px;
+  /* background-color: white; */
+}
+
+/* .summary_table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;  
+} */
+
+.row_odd {
+  background-color:#f2f2f2;
+}
+
+.row_even {
+  background-color:white;
+}
+
+.id_table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  margin-bottom: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+}
+
+.id_table td {
+  /* border: 1px solid #ddd; */
+  padding-left:2px;
+  padding-top:5px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;  
+}
+
+.id_table tr {
+  border: 1px solid #ddd;
+  padding-top:2px;
+  padding-bottom:2px;
+}
+
+.id_table th {
+  text-align: left;
+  padding-left: 2px;
+  padding-top: 5px;
+  background-color: white;
+  border: 1px solid #ddd;  
+  color: black;
+}
