--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     border: 2px #eee solid;
     color: black;
     text-align: center;
@@ -42,9 +42,9 @@ p {
 }
 
 
-/* img {
+img {
   width: 10cm;
-} */
+}
 
 
 #project_table {
@@ -79,7 +79,7 @@ p {
   width: 95%;
 }
 #info_table td, #project_table th {
-  /* border: 1px solid #ddd; */
+  border: 1px solid #ddd;
   padding: 8px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;  
@@ -112,19 +112,19 @@ p {
   color: black;
 }
 
-/* .summary_table tr:nth-child(odd){background-color: #f2f2f2;} */
+.summary_table tr:nth-child(odd){background-color: #f2f2f2;}
 .summary_table tr{
   padding-top: 2px;
   padding-bottom: 3px;
-  /* background-color: white; */
+  background-color: white;
 }
 
-/* .summary_table td {
+.summary_table td {
   border: 1px solid #ddd;
   padding: 8px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;  
-} */
+}
 
 .row_odd {
   background-color:#f2f2f2;
@@ -145,7 +145,7 @@ p {
 }
 
 .id_table td {
-  /* border: 1px solid #ddd; */
+  border: 1px solid #ddd;
   padding-left:2px;
   padding-top:5px;
   border-top: 1px solid #ddd;
@@ -165,4 +165,188 @@ p {
   background-color: white;
   border: 1px solid #ddd;  
   color: black;
+}
+
+
+.metadata_table {
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+}
+
+.metadata_table td {
+  border: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;  
+}
+
+.metadata_table tr {
+  border: 1px solid #ddd;
+}
+
+.metadata_table th {
+  text-align: left;
+  background-color: white;
+  border: 1px solid #ddd;  
+  color: black;
+}
+
+
+#metadata_table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+}
+#metadata_table td, #metadata_table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+#metadata_table tr:nth-child(odd){background-color: #f2f2f2;}
+#metadata_table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: white;
+  border: 1px solid #ddd;  
+  color: black;
+} */
+
+h1 {
+  border: 2px #eee solid;
+  color: black;
+  text-align: center;
+  padding: 10px;
+  font-family: Verdana, sans-serif
+}
+
+
+h2 {color: black;
+  text-align: left;
+  padding: 10px;
+  font-family: Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 20px
+}
+
+h3 {color: black;
+  text-align: left;
+  padding: 10px;
+  font-family: Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 16px
+}
+
+
+
+li {
+ font-family: Arial, Helvetica, sans-serif;
+ text-align: left;
+ color: black; font-weight:normal;
+ padding-left:0px;
+ list-style-position: outside;
+}
+
+
+p {
+ font-family: Arial, Helvetica, sans-serif;
+ text-align: left;
+ color: black;
+ font-weight:normal 
+}
+
+
+img {
+width: 85%;
+}
+
+
+#project_table {
+margin-left: auto;
+margin-right: auto;
+margin-top: 60px;
+font-family: Arial, Helvetica, sans-serif;
+border-collapse: collapse;
+width: 95%;
+}
+#project_table td, #project_table th {
+border: 1px solid #ddd;
+padding: 8px;
+}
+#project_table tr:nth-child(even){background-color: #f2f2f2;}
+#project_table th {
+padding-top: 12px;
+padding-bottom: 12px;
+text-align: left;
+background-color: #00b300;
+color: white;
+}
+
+
+#info_table {
+margin-left: auto;
+margin-right: auto;
+margin-top: 30px;
+margin-bottom: 30px;
+font-family: Arial, Helvetica, sans-serif;
+border-collapse: collapse;
+width: 95%;
+}
+#info_table td, #info_table th {
+/* border: 1px solid #ddd; */
+padding: 8px;
+}
+#info_table tr:nth-child(even){background-color: #f2f2f2;}
+#info_table th {
+padding-top: 12px;
+padding-bottom: 12px;
+text-align: left;
+background-color: white;
+border-top: 1px solid black;
+border-bottom: 1px solid black;
+color: black;
+}
+
+
+
+
+#user_table {
+margin-left: auto;
+margin-right: auto;
+margin-top: 30px;
+margin-bottom: 30px;
+font-family: Arial, Helvetica, sans-serif;
+border-collapse: collapse;
+width: 95%;
+position: absolute;
+bottom:0px;
+}
+#user_table td, #user_table th {
+border: 1px solid #ddd;
+padding: 8px;
+}
+#user_table th {
+padding-top: 12px;
+padding-bottom: 12px;
+text-align: left;
+background-color: white;
+border: 1px solid #ddd;  
+color: black;
+}
+
+
+
+
+
+
+@page horizontal_page {
+  size: landscape;
+}
+.landscape {
+  page: horizontal_page;
 }
