--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,245 +1,24 @@
-/* h1 {
-    border: 2px #eee solid;
-    color: black;
-    text-align: center;
-    padding: 10px;
-    font-family: Verdana, sans-serif
-}
-
-
-h2 {color: black;
-    text-align: left;
-    padding: 0px;
-    font-family: Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 20px
-}
-
-h3 {color: black;
-    text-align: left;
-    padding: 10px;
-    font-family: Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 16px
-}
-
-
-
-li {
-   font-family: Arial, Helvetica, sans-serif;
-   text-align: left;
-   color: black; font-weight:normal;
-   padding-left:0px;
-   list-style-position: outside;
-}
-
-
-p {
-   font-family: Arial, Helvetica, sans-serif;
-   text-align: left;
-   color: black;
-   font-weight:normal 
-}
-
-
-img {
-  width: 10cm;
-}
-
-
-#project_table {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 60px;
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
-}
-#project_table td, #project_table th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-#project_table tr:nth-child(even){background-color: #f2f2f2;}
-#project_table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #00b300;
-  color: white;
-}
-
-
-#info_table {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
-}
-#info_table td, #project_table th {
-  border: 1px solid #ddd;
-  padding: 8px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;  
-}
-#info_table tr:nth-child(odd){background-color: #f2f2f2;}
-#info_table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: white;
-  border: 1px solid #ddd;  
-  color: black;
-}
-
-.summary_table {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
-}
-
-.summary_table th {
-  text-align: left;
-  padding-top:3px;
-  background-color: white;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;    
-  color: black;
-}
-
-.summary_table tr:nth-child(odd){background-color: #f2f2f2;}
-.summary_table tr{
-  padding-top: 2px;
-  padding-bottom: 3px;
-  background-color: white;
-}
-
-.summary_table td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;  
-}
-
-.row_odd {
-  background-color:#f2f2f2;
-}
-
-.row_even {
-  background-color:white;
-}
-
-.id_table {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0px;
-  margin-bottom: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
-}
-
-.id_table td {
-  border: 1px solid #ddd;
-  padding-left:2px;
-  padding-top:5px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;  
-}
-
-.id_table tr {
-  border: 1px solid #ddd;
-  padding-top:2px;
-  padding-bottom:2px;
-}
-
-.id_table th {
-  text-align: left;
-  padding-left: 2px;
-  padding-top: 5px;
-  background-color: white;
-  border: 1px solid #ddd;  
-  color: black;
-}
-
-
-.metadata_table {
-  margin-left: auto;
-  margin-right: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
-}
-
-.metadata_table td {
-  border: 1px solid #ddd;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;  
-}
-
-.metadata_table tr {
-  border: 1px solid #ddd;
-}
-
-.metadata_table th {
-  text-align: left;
-  background-color: white;
-  border: 1px solid #ddd;  
-  color: black;
-}
-
-
-#metadata_table {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
-}
-#metadata_table td, #metadata_table th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-#metadata_table tr:nth-child(odd){background-color: #f2f2f2;}
-#metadata_table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: white;
-  border: 1px solid #ddd;  
-  color: black;
-} */
 
 h1 {
   border: 2px #eee solid;
   color: black;
   text-align: center;
-  padding: 10px;
   font-family: Verdana, sans-serif
 }
 
 
 h2 {color: black;
   text-align: left;
-  padding: 10px;
   font-family: Verdana, sans-serif;
   font-weight: bold;
-  font-size: 20px
+  font-size: 16px
 }
 
 h3 {color: black;
   text-align: left;
-  padding: 10px;
   font-family: Verdana, sans-serif;
   font-weight: bold;
-  font-size: 16px
+  font-size: 14px
 }
 
 
@@ -257,7 +36,8 @@ p {
  font-family: Arial, Helvetica, sans-serif;
  text-align: left;
  color: black;
- font-weight:normal 
+ font-weight:normal;
+ font-size: 12px;
 }
 
 
@@ -267,25 +47,27 @@ width: 85%;
 
 
 #project_table {
-margin-left: auto;
-margin-right: auto;
-margin-top: 60px;
-font-family: Arial, Helvetica, sans-serif;
-border-collapse: collapse;
-width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+  font-size:12px;
 }
 #project_table td, #project_table th {
-border: 1px solid #ddd;
-padding: 8px;
+  border: 1px solid black;
+  padding: 8px;
+  text-align: center;
 }
-#project_table tr:nth-child(even){background-color: #f2f2f2;}
-#project_table th {
-padding-top: 12px;
-padding-bottom: 12px;
-text-align: left;
-background-color: #00b300;
-color: white;
+#project_table tr {
+  border: 1px black;
 }
+/* #project_table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+} */
 
 
 #info_table {
@@ -345,6 +127,11 @@ color: black;
   margin: 10mm;
 }
 
+@page {
+  @bottom-right{
+      content: "Page " counter(page) " of " counter(pages);
+  }
+}
 
 @page horizontal_page {
   size: landscape;
