changed parsing for new input file; changed WT/WG plots and tables

--- a/templates/metadata.html
+++ b/templates/metadata.html
@@ -45,81 +45,88 @@
    <div style="page-break-after: always;"></div>
 
     {% for section in sections %}
-        <div class="title_toc_wrap">
-            <h2 id="{{ section }}">{{ loop.index }}. {{ sections[section].title }}</h2>
-            <div class="return_to_toc"><a href="#toc"><b>Contents &#8593</b></a></div>
+        <div class="landscape">
+            <div class="title_toc_wrap">
+                <h2 id="{{ section }}">{{ loop.index }}. {{ sections[section].title }}</h2>
+                <div class="return_to_toc"><a href="#toc"><b>Contents &#8593</b></a></div>
+            </div>
+            <p>{{ sections[section].blurb }}</p>
         </div>
 
-        <p>{{ sections[section].blurb }}</p>
-
         {% for table in sections[section].tables %}
-            {% if sections[section].tables|length > 1 %}        
-                <h3 id="{{ section }}_{{ table }}">{{ sections[section].tables[table].title }}</h3>
-            {% endif %}
-            <p>{{ sections[section].tables[table].blurb }}</p>
-
-            {% if section == "cases" %}
-                <table class="case_table" style="font-size: 9px;">
-                    <tr>
-                        {% for heading in sections[section].tables[table].headings %}
-                            <th>{{ sections[section].tables[table]["headings"][heading] }}</th>
-                        {% endfor %}
-                    </tr>  
-                    {% for entry in sections[section].tables[table]["data"] %}
-                        {% set outer_loop = loop %}              
-                            {% for id in entry %}
-                                {% for row in entry[id] %}
-                                    <tr style="page-break-inside: avoid;" class="{{ outer_loop.cycle('odd', 'even') }}">       
-                                        {% for heading in sections[section].tables[table]["headings"] %}
-                                            {% if row[heading] is number %}
-                                                <td>{{ "{:,}".format(row[heading]) }}</td>
-                                            {% else %}     
-                                                <td style="word-break:break-all;"> {{ row[heading] }}</td>
-                                            {% endif %}
-                                        {% endfor %}
-                                    </tr>
-                                {% endfor %}
+            <div class="landscape">
+                {% if sections[section].tables|length > 1 %}        
+                    <h3 id="{{ section }}_{{ table }}">{{ sections[section].tables[table].title }}</h3>
+                {% endif %}
+                <p>{{ sections[section].tables[table].blurb }}</p>
+                
+                {% if section == "cases" or section == "call_ready" and table == 0 or section == "raw_seq_data" and table == 0 %}
+                    <table class="case_table" style="font-size: 9px;">
+                        <tr>
+                            {% for heading in sections[section].tables[table].headings %}
+                                <th>{{ sections[section].tables[table]["headings"][heading] }}</th>
                             {% endfor %}
-                        </tbody>
-                    {% endfor %}
-                </table>
-            {% else %}
-
-                <table class="info_table", style="font-size: 9px;">
-                    <tr>
-                        {% for heading in sections[section].tables[table].headings %}
-                            <th>{{ sections[section].tables[table]["headings"][heading] }}</th>
+                        </tr>  
+                        {% for entry in sections[section].tables[table]["data"] %}
+                            {% set outer_loop = loop %}              
+                                {% for id in entry %}
+                                    {% for row in entry[id] %}
+                                        <tr style="page-break-inside: avoid;" class="{{ outer_loop.cycle('odd', 'even') }}">       
+                                            {% for heading in sections[section].tables[table]["headings"] %}
+                                                {% if row[heading] is number %}
+                                                    <td>{{ "{:,}".format(row[heading]) }}</td>
+                                                {% elif heading == "case" %}     
+                                                    <td style="word-break: keep-all;">{{ row[heading] }}</td>
+                                                {% else %}     
+                                                    <td style="word-break:break-all;"> {{ row[heading] }}</td>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </tr>
+                                    {% endfor %}
+                                {% endfor %}
+                            </tbody>
                         {% endfor %}
-                    </tr>  
+                    </table>
+                {% else %}
 
-                    {% for entry in sections[section].tables[table]["data"] %}
-                        <tr style="page-break-inside: avoid;">       
-                            {% if entry %}
-                                {% for heading in sections[section].tables[table]["headings"] %}
-                                    {% if entry[heading] is number %}
-                                        <td>{{ "{:,}".format(entry[heading]) }}</td>
-                                    {% else %}     
-                                        <td style="word-break:break-all;"> {{ entry[heading] }}</td>
-                                    {% endif %}
+                    <table class="info_table", style="font-size: 9px;">
+                        <tr>
+                            {% for heading in sections[section].tables[table].headings %}
+                                <th>{{ sections[section].tables[table]["headings"][heading] }}</th>
+                            {% endfor %}
+                        </tr>  
 
-                                {% endfor %}
-                            {% else %}
-                                <td>{{ id }}</td>
-                                    {% for i in range (sections[section].tables[table].headings|length - 1) %}
-                                <td> — </td>
-                                {% endfor %}
-                            {% endif %}
-                        </tr>
-                    {% endfor %}
-                </table>
-            
-            {% endif%}
-            
-            {% for entry in sections[section].tables[table].glossary %}
-                <p style="font-size:6px;"><b>{{ sections[section].tables[table].headings[entry] }}</b>: {{ sections[section].tables[table].glossary[entry] }}</p>
-            {% endfor %}
+                        {% for entry in sections[section].tables[table]["data"] %}
+                            <tr style="page-break-inside: avoid;">       
+                                {% if entry %}
+                                    {% for heading in sections[section].tables[table]["headings"] %}
+                                        {% if entry[heading] is number %}
+                                            <td>{{ "{:,}".format(entry[heading]) }}</td>
+                                        {% elif heading == "case" %}     
+                                            <td style="word-break: keep-all;">{{ entry[heading] }}</td>
+                                        {% else %}     
+                                            <td style="word-break:break-all;"> {{ entry[heading] }}</td>
+                                        {% endif %}
 
-            <div style="page-break-after: always;"></div>
+                                    {% endfor %}
+                                {% else %}
+                                    <td>{{ id }}</td>
+                                        {% for i in range (sections[section].tables[table].headings|length - 1) %}
+                                    <td> — </td>
+                                    {% endfor %}
+                                {% endif %}
+                            </tr>
+                        {% endfor %}
+                    </table>
+                
+                {% endif%}
+                
+                {% for entry in sections[section].tables[table].glossary %}
+                    <p style="font-size:6px;"><b>{{ sections[section].tables[table].headings[entry] }}</b>: {{ sections[section].tables[table].glossary[entry] }}</p>
+                {% endfor %}
+
+                <div style="page-break-after: always;"></div>
+            </div>
         
             {% if sections[section].tables[table].plots %}
                 <h3>{{ sections[section].tables[table].title }} Plots</h3>
@@ -135,6 +142,6 @@
             {% endif %}                
         {% endfor %}
 
-{% endfor %}
+    {% endfor %}
 </body>
 </html>
