--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,8 +197,11 @@ div.case_row>div:nth-of-type(odd) {
 
 @page {
   margin: 10mm;
+  /* size: landscape; */
 }
-
+/* @page:first{
+  size: portrait;
+} */
 @page {
   @bottom-right{
       content: "Page " counter(page) " of " counter(pages);
@@ -208,6 +211,13 @@ div.case_row>div:nth-of-type(odd) {
 @page horizontal_page {
   size: landscape;
 }
+.landscape {
+  page: horizontal_page;
+}
+
+/* @page horizontal_page {
+  size: landscape;
+} */
 /* .landscape {
   page: horizontal_page;
 } */
