--- a/templates/base.html
+++ b/templates/base.html
@@ -5,78 +5,109 @@
     <link rel="stylesheet" href="./static/css/style.css">
     <title>analysis_report</title>
 </head>
-<body>
-   <table style="width:100%; font-family: Arial, Helvetica, sans-serif; margin-bottom:50px">
-    <tr>
-      <td style="width: 40%; padding: 3px; text-align: left"><img src="./static/images/OICR_Logo_RGB_ENGLISH.png" alt="OICR_logo" title="OICR_logo" style="padding-right: 8px; padding-left:0px; width:6cm"></td>
-      <td style="width: 60%; padding: 3px; text-align: left"><p style="text-align: center; color: black; font-size:45px; font-family: Arial, Verdana, sans-serif; font-weight:bold">Analysis Report</p></td>
-    </tr>
-    </table>
+<body style="margin-left:5mm">
+    <table style="width:100%; font-family: Arial, Helvetica, sans-serif; margin-bottom:50px">
+        <tr>
+            <td style="width: 40%; padding: 3px; text-align: left"><img src="./static/images/OICR_Logo_RGB_ENGLISH.png" alt="OICR_logo" title="OICR_logo" style="padding-right: 8px; padding-left:0px; width:10; height:10"></td>
+            <td style="width: 60%; padding: 3px; text-align: left">
+                <p style="text-align: center; color: black; font-size:30px; font-family: Arial, Verdana, sans-serif; font-weight:600">{{ header.title }} Data Release Report</p>
+            </td>
+        </tr>
+   </table>
+   
+   <p style="font-size: 12px;">{{ header.blurb }}</p>
 
-    <h2>1. List of Sample IDs</h2>
+   <table id="project_table">
+        <tr>
+            <th>Project Code</th>
+            <th>Release</th>
+            <th>Date of Report Generation</th>     
+        </tr>    
+            <tr>       
+            <td> {{ header.project }} </td>
+            <td> {{ header.release }}</td>      
+            <td> {{ header.date }} </td>
+            </tr> 
+   </table>
+   <br>
+   <br>
+   <br>
 
-    {% if sample_ids %}
-        <table class="id_table">
-            <thead>
-                <tr>
-                    <th>id</th>
-                </tr>
-            </thead>
-            {% for id in sample_ids %}
-            <tr>
-                <td>{{ id }}</td>
-            </tr>
+   <h2 style="margin-left: 20px" id="toc"><b>Contents</b></h2>
+    {% for section in sections %}
+        <div class="toc-row"><a href="#{{ section }}"> {{ loop.index}}. {{ sections[section].title }}</a></div>
+        {% if sections[section].tables|length > 1 %}
+            {% for table in sections[section].tables %}     
+                <div class="toc-row" style="margin-left:100px"><a href="#{{ section }}_{{ table }}"> {{ sections[section].tables[table].title }}</a></div>
             {% endfor %}
-        </table>
-    {% else %}
-        <p>Error: no sample IDs found</p>
-    {% endif %}
+        {% endif %}
+    {% endfor %}
+   <div style="page-break-after: always;"></div>
 
-    <div style="page-break-after: always;"></div>
-    
-    <h2>2. Data summaries</h2>
-    {% if table_data %}
-        {% for process in processes %}
-            <h3>Table {{ loop.index }}. Summary of {{ process }}</h3>
-                <table class="summary_table">
-                <thead>
-                    <tr style="padding:0px">
-                        {% for h in table_data[process]["header"] %}
-                            <th>
-                                {% if h.startswith('bcf_PASS') %}
-                                    {{ h[17:] }}
-                                {% else %}
-                                    {{ h }}
-                                {% endif %}
-                            </th>
+    {% for section in sections %}
+        <div class="landscape">
+            <div class="title_toc_wrap">
+                <h2 id="{{ section }}">{{ loop.index }}. {{ sections[section].title }}</h2>
+                <div class="return_to_toc"><a href="#toc"><b>Contents &#8593</b></a></div>
+            </div>
+            <p>{{ sections[section].blurb }}</p>
+        </div>
+
+        {% for table in sections[section].tables %}
+            <div class="landscape">
+                {% if sections[section].tables|length > 1 %}        
+                    <h3 id="{{ section }}_{{ table }}">{{ sections[section].tables[table].title }}</h3>
+                {% endif %}
+                <p>{{ sections[section].tables[table].blurb }}</p>
+            
+                <table class="case_table" style="font-size: 9px;">
+                    <tr>
+                        {% for heading in sections[section].tables[table].headings %}
+                            <th>{{ sections[section].tables[table]["headings"][heading] }}</th>
                         {% endfor %}
-                    </tr>
-                </thead>
-                {% for item in table_data[process]["data"] %}
-                    <tr class="{{ loop.cycle('row_odd', 'row_even') }}">
-                        {% for cell in item %}
-                            <TD>{{ cell }}</TD>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
+                    </tr>  
+                    {% for entry in sections[section].tables[table]["data"] %}
+                        {% set outer_loop = loop %}              
+                            {% for id in entry %}
+                                {% for row in entry[id] %}
+                                    <tr style="page-break-inside: avoid;" class="{{ outer_loop.cycle('odd', 'even') }}">       
+                                        {% for heading in sections[section].tables[table]["headings"] %}
+                                            {% if row[heading] is number %}
+                                                <td>{{ "{:,}".format(row[heading]) }}</td>
+                                            {% elif heading == "case" %}     
+                                                <td style="word-break: keep-all;">{{ row[heading] }}</td>
+                                            {% else %}     
+                                                <td style="word-break:break-all;"> {{ row[heading] }}</td>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </tr>
+                                {% endfor %}
+                            {% endfor %}
+                        </tbody>
+                    {% endfor %}
                 </table>
-            <div style="page-break-after: always;"></div>
-        {% endfor %}
-    {% else %}
-        <p>No tables to display</p>
-    {% endif %}
+                
+                {% for entry in sections[section].tables[table].glossary %}
+                    <p style="font-size:6px;"><b>{{ sections[section].tables[table].headings[entry] }}</b>: {{ sections[section].tables[table].glossary[entry] }}</p>
+                {% endfor %}
 
-    <h2>3. Data summary plots</h2>
-    {% if plots %}
-        {% for plot in plots %}
-            <h3>Figure {{ loop.index }}. Plot of {{ plot.process }}</h3>
-            <body>
-                <img src="{{ plot.plot }}"></img>
-            </body>
-            <div style="page-break-after: always;"></div>
+                <div style="page-break-after: always;"></div>
+            </div>
+        
+            {% if sections[section].tables[table].plots %}
+                <h3>{{ sections[section].tables[table].title }} Plots</h3>
+                    {% for plot in sections[section].tables[table].plots %}
+                        <div style="page-break-inside: avoid;">
+                            <p style="font-size: 14px;font-weight: 600;">Figure {{ loop.index }}. Plot of {{ sections[section].tables[table].plots[plot].title }}</p>
+                            <br>
+                            <img src="{{ sections[section].tables[table].plots[plot].fig_path }}"></img>
+                        </div>
+        
+                    {% endfor %}
+                    <div style="page-break-after: always;"></div>
+            {% endif %}                
         {% endfor %}
-    {% else %}
-            <p>No plots to display</p>
-    {% endif %}
 
+    {% endfor %}
 </body>
+</html
